# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metta-ul"
version = "1.0.0"
authors = [
    { name = "Ramin Barati", email = "rekino@gmail.com" },
    { name = "Amirhossein Nouranizadeh", email = "amirhossein.nouranizadeh@gmail.com" },
    { name = "Farhoud", email = "farhoud.mojahedzadeh@gmail.com" }
]
description = "Basic implementation of clustering algorithms in MeTTa language, including k-means, GMM, spectral clustering, and hierarchical"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "hyperon",
    "pandas",
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/SNetGrant/metta-ul"

[tool.setuptools]
include-package-data = true


